--- a/monibank-main/pages/abrir-conta-form.html
+++ b/monibank-main/pages/abrir-conta-form.html
@@ -77,7 +77,7 @@
                 </fieldset>
                 <fieldset class="formulario__campo">
                     <label class="campo__etiqueta" for="cpf">CPF (apenas números)</label>
-                    <input name="cpf" id="cpf" class="campo__escrita campo__escrita--menor" type="text" minlength="11" maxlength="14" required="required" pattern="\d{3}\.?\d{3}\.?\d{3}\-?\d{2}\"/>
+                    <input name="cpf" id="cpf" class="campo__escrita campo__escrita--menor" type="text" minlength="11" maxlength="14" pattern="\d{3}\.?\d{3}\.?\d{3}\-?\d{2}" required/>
                     <span class="mensagem-erro"></span>
                 </fieldset>
                 <fieldset class="formulario__campo">
@@ -86,7 +86,7 @@
                     <span class="mensagem-erro"></span>
                 </fieldset>
                 <fieldset class="formulario__termos">
-                    <input name="termos" class="termos__input" type="checkbox" required>
+                    <input name="termos" class="termos__input" type="checkbox" required/>
                     <p class="termos__texto">Li e estou ciente quanto às condições de tratamento dos meus dados conforme
                         descrito na Política
                         de
@@ -95,7 +95,7 @@
                 </fieldset>
 
                 <div>
-                    <input value="Avançar" class="formulario__botao" id="enviar" data-botao-enviar type="submit">
+                    <input value="Avançar" class="formulario__botao" id="enviar" data-botao-enviar type="submit"/>
                     <span class="mensagem-erro"></span>
                 </div>
             </form>
@@ -158,7 +158,7 @@
             <h2 class="rodape__logo"><span class="rodape__logo--negrito">Moni</span>Bank</h2>
         </section>
     </footer>
-    <script src="/js/script.js" type="module"></script>
+    <script src="https://github.com/Pedro-Duarte/monibank-main/blob/main/js/script.js" type="module" crossorigin="anonymous"></script>
 </body>
 
 </html>
